[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.2",
]

[project]
name = "django-storages"
description = "Support for many storage backends in Django"
authors = [
    { name = "Josh Schneier", email = "josh.schneier@gmail.com" },
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = [
    "readme",
]
dependencies = [
    "Django>=3.2",
]
version = "1.14.6+lineaje.1"
maintainers = [
    { name = "Lineaje DepFixer", email = "221268890+Lineaje-DepFixer@users.noreply.github.com" },
]

[project.license]
text = "BSD-3-Clause"

[project.optional-dependencies]
azure = [
    "azure-core>=1.13",
    "azure-storage-blob>=12",
]
boto3 = [
    "boto3>=1.4.4",
]
dropbox = [
    "dropbox>=7.2.1",
]
google = [
    "google-cloud-storage>=1.36.1",
]
libcloud = [
    "apache-libcloud",
]
s3 = [
    "boto3>=1.4.4",
]
sftp = [
    "paramiko>=1.15",
]

[project.urls]
Homepage = "https://github.com/lineaje-labs-gos/jschneier-django-storages"
Repository = "https://github.com/lineaje-labs-gos/jschneier-django-storages"
Tracker = "https://github.com/lineaje-labs-gos/jschneier-django-storages/issues"

[tool.setuptools]
zip-safe = false
packages = [
    "storages",
    "storages.backends",
]
include-package-data = false

[tool.setuptools.dynamic.readme]
file = [
    "README.rst",
]

[tool.setuptools.dynamic.version]
attr = "storages.__version__"

[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
select = [
    "AIR",
    "ASYNC",
    "B",
    "C4",
    "C90",
    "DJ",
    "E",
    "EXE",
    "F",
    "FLY",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "ISC",
    "NPY",
    "PD",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PYI",
    "RUF",
    "SLOT",
    "T10",
    "T20",
    "TCH",
    "TID",
    "W",
    "YTT",
]
ignore = [
    "B028",
    "B904",
    "PGH004",
]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = [
    "storages",
]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = [
    "E402",
    "INP001",
]
"storages/backends/ftp.py" = [
    "PERF203",
]
"tests/test_s3.py" = [
    "B018",
]

[tool.ruff.lint.pylint]
allow-magic-value-types = [
    "int",
    "str",
]
